# mongkol-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  deps.py  security.py
app/db/: init_db.py  seed_mock_data.py  session.py
app/models/: __init__.py  audit_log.py  product.py  sale.py  sale_item.py  target.py  user.py
app/routers/: __init__.py  admin.py  auth.py  products.py  sales.py
app/schemas/: product.py  sale.py  user.py
app/services/: audit_service.py  sales_service.py
app/utils/: csv_export.py
migration/: env.py
